# ezllm-gateway

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  route_handler.py  routing_configs.yaml  user_configs.yaml
auth/: auth_manager.py
config/: user_configs.yaml
core/: llm_handler.py  route_handler.py
integrations/: prometheus.py
routes/: chat.py
utils/: config_loader.py  model_config.py  openai.py  setting.py  user_config.py
