[tool.poetry]
name = "ezllm-gateway"
version = "0.1.0"
description = "Easy LLM Gateway to call 100+ LLM APIs in OpenAI format"
authors = ["erhwenkuo <erhwenkuo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
